fix: theme changing and loging on process

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,3 +1,14 @@
-<p>
-  login works!
-</p>
+<div class="flex flex-column justify-content-center text-center">
+  <img src="/assets/imgs/logo_app.png" alt="" class="logo" />
+  <ion-button
+    type="submit"
+    ill="solid"
+    shape="round"
+    size="default"
+    color="warning"
+  >
+    <span>
+      <strong class="text-white">Ingresar con Google</strong>
+    </span>
+  </ion-button>
+</div>
