feat: login in process

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,14 +1,12 @@
-<div class="flex flex-column justify-content-center text-center">
-  <img src="/assets/imgs/logo_app.png" alt="" class="logo" />
+<div class="flex flex-column align-items-center mb-0 mt-8 justify-content-center">
+  <img src="/assets/imgs/gluten_fre_logo.png" alt="" class="logo my-4" />
   <ion-button
-    type="submit"
     ill="solid"
     shape="round"
     size="default"
-    color="warning"
+    color="light"
   >
-    <span>
-      <strong class="text-white">Ingresar con Google</strong>
-    </span>
+  <ion-icon slot="start" color="danger" name="logo-google"></ion-icon>
+  <span class="text-bold">Ingresar con Google</span>
   </ion-button>
 </div>
