--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,4 +1,19 @@
-.logo{
-  width: 30rem;
-  height: 25rem;
+.logo {
+  width: 15rem;
+  height: 15rem;
+}
+ion-button {
+  --background: #93e9be;
+  --background-hover: #9ce0be;
+  --background-activated: #88f4be;
+  --background-focused: #88f4be;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  color: #515a5a;
+  --color: blue;
+  --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
+
+  --ripple-color: #95a5a6;
+
+  --padding-top: 10px;
+  --padding-bottom: 10px;
 }
