💄 fix: login ui changes

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="flex flex-column align-items-center mb-0 mt-8 justify-content-center">
+  <img src="/assets/imgs/family_eating.webp" alt="" class="img_background">
   <img src="/assets/imgs/gluten_fre_logo.png" alt="" class="logo my-4" />
   <ion-button
     ill="solid"
-    shape="round"
     size="default"
     color="light"
   >
