fix: icon floating

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,12 +1,13 @@
 <div class="flex flex-column align-items-center mb-0 mt-8 justify-content-center">
   <img src="/assets/imgs/family_eating.webp" alt="" class="img_background">
-  <img src="/assets/imgs/gluten_fre_logo.png" alt="" class="logo my-4" />
+  <img src="/assets/imgs/gluten_fre_logo.png" alt="" class="logo floating my-8" />
   <ion-button
     ill="solid"
     size="default"
-    color="light"
+    color="secondary"
+
   >
-  <ion-icon slot="start" color="danger" name="logo-google"></ion-icon>
+  <ion-icon slot="start" name="logo-google"></ion-icon>
   <span class="text-bold">Ingresar con Google</span>
   </ion-button>
 </div>
