--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,3 +1,6 @@
 <div class="flex align-items-center flex-column">
   <img src="assets/icon/celina.png" alt="" class="w-20rem h-20rem">
+  <ui-type-writer
+  [text]="welcomeMessage"
+  ></ui-type-writer>
 </div>
