--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,7 +10,7 @@
   --ion-color-primary-contrast-rgb: 0, 0, 0;
   --ion-color-primary-shade: #e0ac08;
   --ion-color-primary-tint: #ffca22;
-
+  --background : white;
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
   --ion-color-secondary-rgb: 61, 194, 255;
