🚧 fix: login in progress

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,13 +1,16 @@
 <div
-  class="flex flex-column align-items-center mb-0 mt-8 justify-content-center"
+  class="flex flex-column align-items-center  justify-content-center"
 >
   <img src="/assets/imgs/glutenfree1.jpg" alt="" class="img_background" />
   <img
     src="/assets/imgs/gluten_fre_logo.png"
     alt=""
-    class="logo floating my-8"
+    class="logo floating"
   />
-  <ion-button ill="solid" size="default" color="light" (click)="authUser()">
+</div>
+
+<div class="b-0 flex justify-content-center ">
+  <ion-button ill="solid" size="default" class="w-full m-4" color="light" (click)="authUser()">
     <ion-icon slot="start" name="logo-google"></ion-icon>
     <span class="text-bold">Ingresar con Google</span>
   </ion-button>
