--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,11 +1,12 @@
 .logo {
-  width: 15rem;
+  width: 20rem;
   position: relative;
-  height: 15rem;
+  top: 12rem;
+  height: 20rem;
 }
 ion-button {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  
+
   --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
   --ripple-color: #95a5a6;
   --padding-top: 10px;
@@ -15,7 +16,7 @@ ion-button {
   position: absolute;
   object-fit: cover;
   object-position: 50% 0;
-  height: 1200px;
+  height: 1400px;
   filter: blur(3px);
 
 }
