fix: git ignore

--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -7,6 +7,11 @@
       fill="outline"
       class="w-full"
     ></ui-input-text>
-    <ui-button icon="send" slot="icon-only" color="light" class="mr-2"></ui-button>
+    <ui-button
+      icon="send"
+      slot="icon-only"
+      color="light"
+      class="mr-2"
+    ></ui-button>
   </div>
 </div>
