--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,24 +1,21 @@
 .logo {
   width: 20rem;
   position: relative;
-  top: 12rem;
+  top: 11rem;
   height: 20rem;
 }
 ion-button {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-
   --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
   --ripple-color: #95a5a6;
   --padding-top: 10px;
   --padding-bottom: 10px;
 }
-.img_background{
+.img_background {
   position: absolute;
   object-fit: cover;
   object-position: 50% 0;
   height: 1400px;
-  filter: blur(3px);
-
+  filter: blur(2px);
 }
 
 .floating {
@@ -29,7 +26,13 @@ ion-button {
 }
 
 @keyframes floating {
-  0% { transform: translate(0,  0px); }
-  50%  { transform: translate(0, 15px); }
-  100%   { transform: translate(0, -0px); }
+  0% {
+    transform: translate(0, 0px);
+  }
+  50% {
+    transform: translate(0, 15px);
+  }
+  100% {
+    transform: translate(0, -0px);
+  }
 }
