--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,17 +1,15 @@
-<div class="flex align-items-center flex-column">
-  <img src="assets/icon/celina.png" alt="" class="w-20rem h-20rem" />
-  <ui-type-writer [text]="welcomeMessage"></ui-type-writer>
-  <div class="chatInput w-full flex flex-row">
-    <ui-input-text
-      placeholder="Ingrese una pregunta..."
-      fill="outline"
-      class="w-full"
-    ></ui-input-text>
-    <ui-button
-      icon="send"
-      slot="icon-only"
-      color="light"
-      class="mr-2"
-    ></ui-button>
+<ion-content>
+  <div class="flex align-items-center flex-column">
+    <img src="assets/icon/celina.png" alt="" class="w-20rem h-20rem" />
+    <ui-type-writer [text]="welcomeMessage"></ui-type-writer>
   </div>
-</div>
+</ion-content>
+<ion-footer class="item-input-inset"> </ion-footer>
+<ion-footer>
+  <ion-toolbar>
+    <ion-item lines="none">
+      <ui-input-text class="w-full" placeholder="Ingrese una pregunta..."></ui-input-text>
+      <ui-button icon="send-outline" slot="end" fill="clear" color="dark"></ui-button>
+    </ion-item>
+  </ion-toolbar>
+</ion-footer>
