feat: link api rest with project

--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -9,7 +9,7 @@
   <ion-toolbar>
     <ion-item lines="none">
       <ui-input-text class="w-full" placeholder="Ingrese una pregunta..."></ui-input-text>
-      <ui-button icon="send-outline" slot="end" fill="clear" color="dark"></ui-button>
+      <ui-button icon="send-outline" slot="end" fill="clear" color="dark" (click)="send()"></ui-button>
     </ion-item>
   </ion-toolbar>
 </ion-footer>
