--- a/src/app/widgets/ui-input-text/ui-input-text.component.html
+++ b/src/app/widgets/ui-input-text/ui-input-text.component.html
@@ -1,4 +1,8 @@
-<ion-item [fill]="fill">
-  <ion-label position="floating" *ngIf="label">{{label}}</ion-label>
-  <ion-input [placeholder]="placeholder"  [color]="color"></ion-input>
+<ion-item [fill]="fill" [formGroup]="formGroup">
+  <ion-label position="floating" *ngIf="label">{{ label }}</ion-label>
+  <ion-input
+    [placeholder]="placeholder"
+    [color]="color"
+    [formControlName]="name"
+  ></ion-input>
 </ion-item>
