--- a/src/app/widgets/ui-chat-card/ui-chat-card.component.html
+++ b/src/app/widgets/ui-chat-card/ui-chat-card.component.html
@@ -1,3 +1,9 @@
-<p>
-  ui-chat-card works!
-</p>
+<ion-card [class]="customClass">
+  <ion-card-header>
+    <ion-card-subtitle>{{ user }}</ion-card-subtitle>
+  </ion-card-header>
+
+  <ion-card-content>
+    {{ text }}
+  </ion-card-content>
+</ion-card>
