--- a/src/app/widgets/ui-input-text/ui-input-text.component.html
+++ b/src/app/widgets/ui-input-text/ui-input-text.component.html
@@ -1,8 +1,8 @@
 <ion-item [fill]="fill" [formGroup]="formGroup">
   <ion-label position="floating" *ngIf="label">{{ label }}</ion-label>
-  <ion-input
+  <ion-textarea
     [placeholder]="placeholder"
     [color]="color"
     [formControlName]="name"
-  ></ion-input>
+  ></ion-textarea>
 </ion-item>
