--- a/src/app/widgets/ui-input-text/ui-input-text.component.html
+++ b/src/app/widgets/ui-input-text/ui-input-text.component.html
@@ -3,6 +3,7 @@
   <ion-textarea
     [placeholder]="placeholder"
     [color]="color"
+    class="custom"
     [formControlName]="name"
   ></ion-textarea>
 </ion-item>
