--- a/src/app/widgets/ui-input-text/ui-input-text.component.scss
+++ b/src/app/widgets/ui-input-text/ui-input-text.component.scss
@@ -1,2 +1,7 @@
-
-
+ion-textarea.custom {
+  --padding-bottom:0px;
+  --padding-top: 10px;
+  --placeholder-color: #ddd;
+  --placeholder-opacity: 0.8;
+  --placeholder-font-size:50px;
+}
