--- a/src/app/widgets/ui-type-writer/ui-type-writer.component.html
+++ b/src/app/widgets/ui-type-writer/ui-type-writer.component.html
@@ -1,5 +1,5 @@
 <section>
-  <div class="typewriter monospace text-center text-xl">
+  <div class="typewriter  text-center text-xl">
     {{text}}
   </div>
 
