--- a/src/app/widgets/ui-type-writer/ui-type-writer.component.scss
+++ b/src/app/widgets/ui-type-writer/ui-type-writer.component.scss
@@ -62,7 +62,7 @@
   animation:
     type var(--timePerLine) steps(var(--widthCh)) infinite,
     carriageReturn var(--time) steps(var(--lines)) var(--lines),
-    caret 0.5s steps(2) infinite;
+    caret 0.5s steps(2) ;
 }
 
 /* DEMO */
