--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,6 +1,6 @@
 <ion-content>
   <div class="flex align-items-center flex-column" *ngIf="chatMessages.length == 0;else elseblock">
-    <img src="assets/icon/celina.png" alt="" class="w-20rem h-20rem" />
+    <img src="assets/icon/celina.png" alt="Celina" class="w-20rem h-20rem" />
     <ui-type-writer [text]="welcomeMessage"></ui-type-writer>
   </div>
   <ng-template #elseblock>
