fix: chat with bubble loading working

--- a/src/app/widgets/ui-typing-bubble/ui-typing-bubble.component.html
+++ b/src/app/widgets/ui-typing-bubble/ui-typing-bubble.component.html
@@ -1,36 +1,5 @@
-<div class="half light">
-  <div class="typing">
-    <span class="circle scaling"></span>
-    <span class="circle scaling"></span>
-    <span class="circle scaling"></span>
-  </div>
-  <div class="typing">
-    <span class="circle bouncing"></span>
-    <span class="circle bouncing"></span>
-    <span class="circle bouncing"></span>
-  </div>
-  <br />
-  <div class="typing">
-    <span class="circle scaling"></span>
-    <span class="circle bouncing"></span>
-    <span class="circle scaling"></span>
-  </div>
-</div>
-<div class="half dark">
-  <div class="typing">
-    <span class="circle scaling"></span>
-    <span class="circle scaling"></span>
-    <span class="circle scaling"></span>
-  </div>
-  <div class="typing">
-    <span class="circle bouncing"></span>
-    <span class="circle bouncing"></span>
-    <span class="circle bouncing"></span>
-  </div>
-  <br />
-  <div class="typing">
-    <span class="circle scaling"></span>
-    <span class="circle bouncing"></span>
-    <span class="circle scaling"></span>
-  </div>
+<div class="typing-indicator">
+  <span></span>
+  <span></span>
+  <span></span>
 </div>
