--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,16 +1,26 @@
 <ion-content>
-  <div class="flex align-items-center flex-column" *ngIf="chatMessages.length == 0;else elseblock">
+  <div
+    class="flex align-items-center flex-column"
+    *ngIf="chatMessages.length == 0; else elseblock"
+  >
     <img src="assets/icon/celina.png" alt="Celina" class="w-20rem h-20rem" />
     <ui-type-writer [text]="welcomeMessage"></ui-type-writer>
   </div>
   <ng-template #elseblock>
-    <div  *ngFor="let chatMessage of chatMessages">
+    <div *ngFor="let chatMessage of chatMessages">
       <ui-chat-card
-      [text]="chatMessage.text"
-      [user]="chatMessage.user"
-      [customClass]="chatMessage.orientation"
-      ></ui-chat-card>
+        [text]="chatMessage.text"
+        [user]="chatMessage.user"
+        [customClass]="chatMessage.orientation"
+      >
+      </ui-chat-card>
     </div>
+    <ui-chat-card *ngIf="isTyping"
+        user="Celina"
+        customClass="text-left"
+      >
+      <ui-typing-bubble></ui-typing-bubble>
+      </ui-chat-card>
   </ng-template>
 </ion-content>
 <ion-footer class="item-input-inset"> </ion-footer>
