--- a/src/app/widgets/ui-typing-bubble/ui-typing-bubble.component.scss
+++ b/src/app/widgets/ui-typing-bubble/ui-typing-bubble.component.scss
@@ -1,115 +1,64 @@
-body
-  {display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-  }
-
-.half{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-  &.light .typing
-    {background-color: #e0e0e0}
-  &.dark
-    {
-      background-color: #262626
-    }
-    .typing
-      {
-        background-color: #525252
-      }
-
-
-.typing{
-  display: block;
+.typing-indicator {
+  // background-color: #F5F5F5;
   width: 60px;
-  height: 40px;
-  border-radius: 20px;
-  margin: 0 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  border-radius: 30%;
+  padding: 1rem 1.5rem 2rem;
+  display: inline;
+  margin: 0 auto;
+  position: relative;
+  animation: 2s pulse infinite ease-out;
+}
+.typing-indicator::before,
+.typing-indicator::after {
+     content: '';
+     position: absolute;
+     bottom: -11px;
+     left: -11px;
+     height: 20px;
+     width: 20px;
+     border-radius: 50%;
 
+ }
+.typing-indicator::after {
+     height: 10px;
+     width: 10px;
+     left: -17px;
+     bottom: -17px;
+ }
+ .typing-indicator span {
+  height: 15px;
+  width: 15px;
+  float: left;
+  margin: 0 1px;
+  background-color: #9E9EA1;
+  display: block;
+  border-radius: 50%;
+  opacity: 0.4;
+}
+.typing-indicator span:nth-child(1)
+{
+    animation: 1s blink infinite .3333s;
 }
 
-.circle
-  {
-    display: block;
-  height: 10px;
-  width: 10px;
-  border-radius: 50%;
-  background-color: #8d8d8d;
-  margin: 3px;
+.typing-indicator span:nth-child(2)
+{
+    animation: 1s blink infinite .6666s;
+}
 
-  }
-  &.scaling
+.typing-indicator span:nth-child(3)
+{
+    animation: 1s blink infinite .9999s;
+}
+@keyframes blink
+{
+    50%
     {
-      animation: typing 1000ms ease-in-out infinite;
-    animation-delay: 3600ms;
+        opacity: 1;
     }
-
-  &.bouncing
-    {
-      animation: bounce 1000ms ease-in-out infinite;
-    animation-delay: 3600ms;
+}
+@keyframes pulse
+{
+    50% {
+        transform: scale(1.05);
     }
-
-.circle:nth-child(1)
-  {
-    animation-delay: 0ms;
-  }
-
-.circle:nth-child(2)
-  {
-    animation-delay: 333ms
-  }
-
-.circle:nth-child(3)
-  {
-    animation-delay: 666ms
-  }
-
-
-@keyframes typing
-  {
-    0%
-    {
-      transform: scale(1)
-    }
-  33%
-    {
-      transform: scale(1)
-    }
-  50%
-    {
-      transform: scale(1.4)
-    }
-  100%
-    {
-      transform: scale(1)
-    }
-  }
-
-@keyframes bounce
- {
-  0%
-  {
-    transform: translateY(0)
-  }
-33%
-  {
-    transform: translateY(0)
-  }
-50%
-  {
-    transform: translateY(-10px)
-  }
-100%
-  {transform: translateY(0)}
- }
+}
