fix: multiurl in environment

--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -11,6 +11,7 @@
       <ui-chat-card
         [text]="chatMessage.text"
         [user]="chatMessage.user"
+        [imageDescription]="chatMessage.user[0]"
         [customClass]="chatMessage.orientation"
         [imageUrl]="chatMessage.iconImage"
         [iconPosition]="chatMessage.iconPosition"
