--- a/src/app/widgets/ui-chat-card/ui-chat-card.component.html
+++ b/src/app/widgets/ui-chat-card/ui-chat-card.component.html
@@ -1,22 +1,11 @@
 <ion-card [class]="customClass">
   <ion-card-header class="m-0">
-    <!-- <ion-item lines="none">
-      <ion-avatar [slot]="iconPosition">
-        <img alt="Silhouette of a person's head" [src]="imageUrl" />
-      </ion-avatar>
-      <ion-label>{{ user }}</ion-label>
-    </ion-item> -->
     <ion-chip>
       <ion-avatar>
-        <img alt="Silhouette of a person's head" [src]="imageUrl" />
+        <img [alt]="imageDescription" [src]="imageUrl" />
       </ion-avatar>
       <ion-label>{{ user }}</ion-label>
     </ion-chip>
-
-    <!-- <ion-card-subtitle>{{ user }}</ion-card-subtitle>
-    <ion-avatar class="w-3rem h-3rem">
-      <img alt="Silhouette of a person's head" [src]="imageUrl" />
-    </ion-avatar> -->
   </ion-card-header>
 
   <ion-card-content class="mx-3">
